...
"Ad-free search results" = "Ad-free search results";

/* Bullet point text to describe Neeva benefit */
"Ad-free, private search" = "Ad-free, private search";

/* No comment provided by engineer. */
"Add" = "Add";

/* No comment provided by engineer. */
"Add a note!" = "Add a note!";

/* (No Comment) */
"Add a URL to your new item (optional)" = "Add a URL to your new item (optional)";
...
"Add item" = "Add item";

/* No comment provided by engineer. */
"Add Item" = "Add Item";

/* No comment provided by engineer. */
"Add To" = "Add To";

/* No comment provided by engineer. */
"Add to another Space" = "Add to another Space";

/* No comment provided by engineer. */
"Address" = "Address";
...
"Clear Selected Data on This Device" = "Clear Selected Data on This Device";

/* No comment provided by engineer. */
"Clearing it will sign you out of most sites." = "Clearing it will sign you out of most sites.";

/* No comment provided by engineer. */
"Click to add description" = "Click to add description";

/* No comment provided by engineer. */
"Close" = "Close";

/* No comment provided by engineer. */
"Close %lld %@" = "Close %lld %@";

/* No comment provided by engineer. */
"Close %lld %@%@" = "Close %lld %@%@";
...
"Connected Apps" = "Connected Apps";

/* No comment provided by engineer. */
"Contact us via Support %@" = "Contact us via Support %@";

/* No comment provided by engineer. */
"Continue to Neeva" = "Continue to Neeva";

/* No comment provided by engineer. */
"Cookie Cutter" = "Cookie Cutter";

/* (No Comment) */
"Cookie pop-up blocker" = "Cookie pop-up blocker";
...
"Default Browser" = "Default Browser";

/* button to delete a space */
"delete" = "delete";

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
"Delete All" = "Delete All";

/* the delete action to delete an item from a space */
"delete from" = "delete from";
...
"Downloads" = "Downloads";

/* No comment provided by engineer. */
"Duplicate Tab" = "Duplicate Tab";

/* No comment provided by engineer. */
"Edit" = "Edit";

/* No comment provided by engineer. */
"Edit current address" = "Edit current address";

/* No comment provided by engineer. */
"Edit current search" = "Edit current search";

/* No comment provided by engineer. */
"Edit item" = "Edit item";

/* No comment provided by engineer. */
"Edit Item" = "Edit Item";

/* No comment provided by engineer. */
"Edit Name" = "Edit Name";
...
"Help Center" = "Help Centre";

/* No comment provided by engineer. */
"Help improve Neeva" = "Help improve Neeva";

/* No comment provided by engineer. */
"Help improve this app by sending usage statistics to Neeva." = "Help improve this app by sending usage statistics to Neeva.";

/* Hide full recipe */
"Hide" = "Hide";

/* Hides a section */
"hides" = "hides";
...
"Invite someone" = "Invite someone";

/* No comment provided by engineer. */
"Invite your friends!" = "Invite your friends!";

/* No comment provided by engineer. */
"Item removed from Space" = "Item removed from Space";

/* No comment provided by engineer. */
"Keep" = "Keep";

/* No comment provided by engineer. */
"Keep Looking" = "Keep Looking";
...
"Let Neeva automatically archive tabs that haven’t recently been viewed. Changes will take effect on the next app launch." = "Let Neeva automatically archive tabs that haven’t recently been viewed. Changes will take effect on the next app launch.";

/* No comment provided by engineer. */
"Let's do it!" = "Let's do it!";

/* No comment provided by engineer. */
"Let's Go" = "Let's Go";

/* No comment provided by engineer. */
"Licenses" = "Licences";

/* accessibility label for one type of themes for reader mode feature */
"Light Theme" = "Light Theme";
...
"on a search result or website to add to your Space" = "on a search result or website to add to your Space";

/* No comment provided by engineer. */
"Only available in Strict mode" = "Only available in Strict mode";

/* No comment provided by engineer. */
"Only visible to you and people you shared with" = "Only visible to you and people you shared with";

/* No comment provided by engineer. */
"Oops, this page is a little shy" = "Oops, this page is a little shy";

/* No comment provided by engineer. */
"open" = "open";
...
"Open links without trackers and pop-ups" = "Open links without trackers and pop-ups";

/* No comment provided by engineer. */
"Open My Cookie Cutter" = "Open My Cookie Cutter";

/* No comment provided by engineer. */
"Open Neeva settings" = "Open Neeva Settings";

/* No comment provided by engineer. */
"Open Neeva Settings" = "Open Neeva Settings";

/* No comment provided by engineer. */
"open space" = "open space";
...
"Related Top Reviewed Products" = "Related Top Reviewed Products";

/* No comment provided by engineer. */
"Reload" = "Reload";

/* No comment provided by engineer. */
"Remind me later" = "Remind Me Later";

/* No comment provided by engineer. */
"Remind Me Later" = "Remind Me Later";

/* No comment provided by engineer. */
"Remove" = "Remove";
...
"Restore Tab Group" = "Restore Tab Group";

/* No comment provided by engineer. */
"S" = "S";

/* No comment provided by engineer. */
"Save" = "Save";

/* save 30% discount in our product's subscription price */
"Save 30%" = "Save 30%";

/* No comment provided by engineer. */
"Save All to Spaces" = "Save All to Spaces";
...
"Save and share instantly. Stay organized by adding images, websites, documents to a Space today" = "Save and share instantly. Stay organised by adding images, websites, documents to a Space today";

/* the save action to save an item to a space */
"save to" = "save to";

/* No comment provided by engineer. */
"Save to Spaces" = "Save to Spaces";

/* No comment provided by engineer. */
"Saving preference" = "Saving preference";

/* No comment provided by engineer. */
"Search" = "Search";
...
"Search Engine" = "Search Engine";

/* No comment provided by engineer. */
"Search on %@" = "Search on %@";

/* No comment provided by engineer. */
"Search or enter address" = "Search or enter address";

/* No comment provided by engineer. */
"Search Page" = "Search Page";

/* No comment provided by engineer. */
"Search Tabs" = "Search Tabs";
...
"Show Recent Pages" = "Show Recent Pages";

/* No comment provided by engineer. */
"Show Search Suggestions" = "Show Search Suggestions";

/* No comment provided by engineer. */
"Show Tabs" = "Show Tabs";

/* No comment provided by engineer. */
"Show Tour" = "Show Tour";

/* Shows a section */
"shows" = "shows";

/* No comment provided by engineer. */
"Sign in or Join Neeva" = "Sign in or Join Neeva";

/* No comment provided by engineer. */
"Sign in to:" = "Sign in to:";

/* No comment provided by engineer. */
"Sign in with Apple" = "Sign in with Apple";
...
"Sort" = "Sort";

/* No comment provided by engineer. */
"Space Item" = "Space Item";

/* No comment provided by engineer. */
"Spaces" = "Spaces";

/* No comment provided by engineer. */
"Spread the cheer on the App Store? Your review will help Neeva grow." = "Spread the cheer on the App Store? Your review will help Neeva grow.";

/* (No Comment) */
"Standard" = "Standard";
...
