...
                .scaleEffect(isPressed ? 0.95 : 1)
                .animation(CardTransitionUX.animation, value: isPressed)
        }
    }

    private struct ActionsModifier: ViewModifier {
        let close: (() -> Void)?

        func body(content: Content) -> some View {
            if let close = close {
                content.accessibilityAction(named: "Close", close)
            } else {
                content
...
