...
    private var backButton: some View {
        Button(
            action: {
                onBackButtonTap()
            },
            label: {
                Symbol(.arrowBackward, label: "Return to all Spaces view")
                    .foregroundColor(Color.label)
            }
        )
        .tapTargetFrame()
        .background(WalletTheme.gradient)
        .clipShape(Circle())
...
